tests/negative/test_cast_eval_owning.orb
data Foo {
    x:i32
} (eval (fnc dropFoo (val:Foo::noDrop) () {}));

fnc main () () {
    eval (sym f:Foo);
    eval (cast (Foo cn) f);
};